Revision history for Config-Neat

For the upcoming release

        - Automatically convert merged node to an IxHash
          if necessary

        - Allow casting any hash to an array

0.6     12 March 2014

        - Add the minimal version requirement for Test::More (0.94)

        - Must clone node before putting it into the cache;
          added test for multiple node reuse

0.5     04 March 2014

        - Report a proper error when trying to render objects
          of unsupported types

        - Tests no longer have any hardcoded paths in the
          reference data

0.4     02 March 2014

        - A more correct schema-based automatic casting
          from HASH to ARRAY (+ additional test)

        - Add File::Slurp to the list of build prerequisites

0.3     28 February 2014

        - By default, hashes are now merged (no need to set '+'
          prefix for the merged key); arrays, on the contrary,
          are replaced by default, so '+' is needed to merge
          their values

        - When merging nodes, the original order of the keys
          is preserved

        - Support for hashes with mixed explicitly set and
          automatically generated indexed keys; hashes
          with sequential numbering can be cast to ARRAY
          automatically using Config::Neat::Schema

        * Initial CPAN release *

0.2     23 February 2014

        - Support multiple key declarations at the same level
          (these will be converted to an array).

        - Support installation via Module::Build

...


0.0     22 September 2012

        * Code published on GitHub *