@@ -45,6 +45,10 @@ t/data/inherit/reference/30.nconf_parse_file_error
 t/data/inherit/reference/31.nconf
 t/data/inherit/reference/32.nconf
 t/data/inherit/reference/33.nconf
+t/data/inherit/reference/34.nconf
+t/data/inherit/reference/35.nconf
+t/data/inherit/reference/36.nconf
+t/data/inherit/reference/37.nconf
 t/data/inherit/tests/01.nconf
 t/data/inherit/tests/02.nconf
 t/data/inherit/tests/03.nconf
@@ -78,6 +82,10 @@ t/data/inherit/tests/30.nconf
 t/data/inherit/tests/31.nconf
 t/data/inherit/tests/32.nconf
 t/data/inherit/tests/33.nconf
+t/data/inherit/tests/34.nconf
+t/data/inherit/tests/35.nconf
+t/data/inherit/tests/36.nconf
+t/data/inherit/tests/37.nconf
 t/data/parse/01.nconf
 t/data/render/output.nconf
 t/data/schema/01.nconf
