@@ -1,0 +1,4 @@
+very_long_property_name
+{
+    1    2
+}
