@@ -1,0 +1,4 @@
+very_long_property_name    default_value
+{
+    1                      2
+}
