@@ -1,0 +1,9 @@
+name_2                           default_value
+{
+    1                            2
+
+    very_long_property_name_2    default_value
+    {
+        1                        2
+    }
+}
